text wrap bug remove

--- a/src/index.scss
+++ b/src/index.scss
@@ -612,7 +612,7 @@ input::-webkit-inner-spin-button {
 
   // *My Mission
   .mission {
-    height: calc(100vh - 184px);
+    height: calc(100vh - 205px);
     overflow-y: auto;
 
     .wrapper {
@@ -654,7 +654,7 @@ input::-webkit-inner-spin-button {
           font-weight: 900;
           color: #58595b;
           padding-right: 5px;
-          word-break: break-all;
+          word-break: break-word;
         }
 
         h6 {
@@ -742,7 +742,7 @@ input::-webkit-inner-spin-button {
             opacity: 0.8;
             margin-bottom: 7px;
             width: 80%;
-            word-break: break-all;
+            word-break: break-word;
           }
         }
 
@@ -797,7 +797,7 @@ input::-webkit-inner-spin-button {
 
   // *My Thought
   .thought {
-    height: calc(100vh - 184px);
+    height: calc(100vh - 205px);
     overflow-y: auto;
 
     .thought-box {
@@ -831,6 +831,7 @@ input::-webkit-inner-spin-button {
           font-family: "Avenir";
           font-weight: 900;
           color: #58595b;
+          word-break: break-word;
         }
 
         h6 {
@@ -856,6 +857,7 @@ input::-webkit-inner-spin-button {
           display: -webkit-box;
           -webkit-line-clamp: 9;
           -webkit-box-orient: vertical;
+          word-break: break-word;
         }
 
         span {
@@ -920,7 +922,7 @@ input::-webkit-inner-spin-button {
       border: none;
       background: transparent;
       outline: none;
-      height: calc(100vh - 320px);
+      height: calc(100vh - 335px);
       margin: 10px 0px;
       resize: none;
       white-space: pre-line;
@@ -957,6 +959,7 @@ input::-webkit-inner-spin-button {
       color: #003361;
       width: 100%;
       margin: 10px 0px;
+      word-break: break-word;
     }
 
     .description {
@@ -965,10 +968,11 @@ input::-webkit-inner-spin-button {
       color: #003361;
       line-height: 1.8;
       width: 100%;
-      height: calc(100vh - 270px);
+      height: calc(100vh - 335px);
       overflow-y: auto;
       margin: 10px 0px;
       white-space: pre-line;
+      word-break: break-word;
     }
 
     @media (max-width: 959px) {
